[package]
name = "limit-order"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }

jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
solana-client = "2.0.0"
solana-sdk = "2.0.0"
bincode = "1.3.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rand = "0.9.0"
jito-sdk-rust = "0.1.0"
base64 = "0.22.1"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
reqwest = { version = "0.11.27" }
rocket = { version = "0.5.1", features = ["json"] }
aes-gcm = "0.10.3"
diesel = { version = "2.1.0", features = ["mysql"] }
